--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ M2T2
 grasp_plan/dofbot/assets/ycb
 grasp_plan/dofbot/assets/textures
 grasp_plan/dofbot/assets/objects
+grasp_plan/dofbot/assets/scene/textures
 .DS_Store
